// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Layout : Header renders correctly 1`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container container showBackground "
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
      >
        <div
          className="searchInput"
        >
          <form
            action="/search"
            method="get"
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              name="q"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Search"
              type="search"
            />
          </form>
          <button
            className="searchSubmit"
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </button>
        </div>
        <nav
          className="js-disabled-block"
        >
          <ul>
            <li>
              <a
                href="/test-a"
              >
                Test A
              </a>
            </li>
            <li>
              <a
                href="/test-b"
              >
                Test B
              </a>
            </li>
          </ul>
        </nav>
        <a
          className="getInvolved"
          href="/help"
        >
          Get Involved
        </a>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "background": "colorPlum800",
          "height": "auto",
          "opacity": 1,
          "overflow": "unset",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="banner"
      >
        <span
          className="new"
        >
          New
        </span>
         
        <a
          href="/race"
        >
          We just launched the COVID Racial Data Tracker
        </a>
      </div>
    </div>
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="siteNavContainer"
            >
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <div
                className="tools"
              >
                <div
                  className="searchInput"
                >
                  <div
                    data-reach-combobox=""
                  >
                    <input
                      aria-autocomplete="both"
                      aria-controls="listbox--1"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      autoComplete="off"
                      data-reach-combobox-input=""
                      id="header-search"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                      placeholder="Search"
                      role="combobox"
                      value=""
                    />
                  </div>
                  <button
                    className="searchSubmit"
                    onClick={[Function]}
                    type="button"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="test-file-stub"
                    />
                  </button>
                </div>
                <a
                  className="getInvolved"
                  href="/help"
                >
                  Get involved
                </a>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            className="atlanticBanner"
          >
            <span>
              From
            </span>
             
            <img
              alt="The Atlantic"
              src="test-file-stub"
            />
            <div />
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                Sample title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 2`] = `
<div
  className="circles"
>
  <header
    className="site-header siteHeader  noMargin"
  >
    <div
      className="container container  "
    >
      <div
        className=""
        style={
          Object {
            "height": 0,
            "opacity": 0,
            "overflow": "hidden",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="mobileMenu"
        >
          <div
            className="searchInput"
          >
            <form
              action="/search"
              method="get"
              onSubmit={[Function]}
            >
              <input
                autoComplete="off"
                name="q"
                onBlur={[Function]}
                onFocus={[Function]}
                placeholder="Search"
                type="search"
              />
            </form>
            <button
              className="searchSubmit"
              onClick={[Function]}
              type="button"
            >
              <img
                alt=""
                aria-hidden="true"
                src="test-file-stub"
              />
            </button>
          </div>
          <nav
            className="js-disabled-block"
          >
            <ul>
              <li>
                <a
                  href="/test-a"
                >
                  Test A
                </a>
              </li>
              <li>
                <a
                  href="/test-b"
                >
                  Test B
                </a>
              </li>
            </ul>
          </nav>
          <a
            className="getInvolved"
            href="/help"
          >
            Get Involved
          </a>
          <div
            className="mobilePointer"
          />
        </div>
      </div>
      <div
        className=""
        style={
          Object {
            "background": "colorPlum800",
            "height": "auto",
            "opacity": 1,
            "overflow": "unset",
            "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
          }
        }
      >
        <div
          className="banner"
        >
          <span
            className="new"
          >
            New
          </span>
           
          <a
            href="/race"
          >
            We just launched the COVID Racial Data Tracker
          </a>
        </div>
      </div>
      <div
        className="container false container"
      >
        <div
          className="layout--content-full"
        >
          <div
            className="layout--content-primary"
          >
            <div
              className="siteTitleContainer"
            >
              <div
                className="siteTitleInner"
              >
                <a
                  href="/"
                >
                  <img
                    alt="The COVID Tracking Project"
                    src="test-file-stub"
                    width="176px"
                  />
                </a>
              </div>
              <div
                className="siteNavContainer"
              >
                <div
                  className="navContainer"
                >
                  <button
                    aria-expanded={false}
                    className="mobileToggle"
                    onClick={[Function]}
                    type="button"
                  >
                    Menu
                  </button>
                </div>
                <div
                  className="tools"
                >
                  <div
                    className="searchInput"
                  >
                    <div
                      data-reach-combobox=""
                    >
                      <input
                        aria-autocomplete="both"
                        aria-controls="listbox--3"
                        aria-expanded={false}
                        aria-haspopup="listbox"
                        autoComplete="off"
                        data-reach-combobox-input=""
                        id="header-search"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onSelect={[Function]}
                        placeholder="Search"
                        role="combobox"
                        value=""
                      />
                    </div>
                    <button
                      className="searchSubmit"
                      onClick={[Function]}
                      type="button"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        src="test-file-stub"
                      />
                    </button>
                  </div>
                  <a
                    className="getInvolved"
                    href="/help"
                  >
                    Get involved
                  </a>
                </div>
                <nav
                  className="js-disabled-block"
                >
                  <ul>
                    <li>
                      <a
                        href="/test-a"
                      >
                        Test A
                      </a>
                    </li>
                    <li>
                      <a
                        href="/test-b"
                      >
                        Test B
                      </a>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
            <div
              className="atlanticBanner"
            >
              <span>
                From
              </span>
               
              <img
                alt="The Atlantic"
                src="test-file-stub"
              />
              <div />
            </div>
            <div
              className="titleSubnavContainer"
            >
              <div
                className="title"
              >
                <h1
                  className="page-title pageTitle extraSpace"
                >
                  Sample title
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
   
  <div
    className="container false container"
  >
    <div
      className="layout--content-full"
    >
      <div
        className="layout--content-primary"
      >
        <div
          className="hero hero"
        >
          <p
            className="header"
          >
            The COVID Tracking Project collects and publishes the most complete testing data available for US states and territories.
          </p>
          <div
            className="ctas"
          >
            <a
              className="button"
              href="/data"
            >
              Get the Data
            </a>
            <span>
              or
            </span>
            <a
              href="/about-data"
            >
              Learn About the Data
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Layout : Header renders correctly 3`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container container showBackground "
  >
    <div
      className=""
      style={
        Object {
          "height": 0,
          "opacity": 0,
          "overflow": "hidden",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="mobileMenu"
      >
        <div
          className="searchInput"
        >
          <form
            action="/search"
            method="get"
            onSubmit={[Function]}
          >
            <input
              autoComplete="off"
              name="q"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Search"
              type="search"
            />
          </form>
          <button
            className="searchSubmit"
            onClick={[Function]}
            type="button"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </button>
        </div>
        <nav
          className="js-disabled-block"
        >
          <ul>
            <li>
              <a
                href="/test-a"
              >
                Test A
              </a>
            </li>
            <li>
              <a
                href="/test-b"
              >
                Test B
              </a>
            </li>
          </ul>
        </nav>
        <a
          className="getInvolved"
          href="/help"
        >
          Get Involved
        </a>
        <div
          className="mobilePointer"
        />
      </div>
    </div>
    <div
      className=""
      style={
        Object {
          "background": "colorPlum800",
          "height": "auto",
          "opacity": 1,
          "overflow": "unset",
          "transition": "height 500ms ease-in-out,opacity 500ms ease-in-out,background 500ms ease-in-out",
        }
      }
    >
      <div
        className="banner"
      >
        <span
          className="new"
        >
          New
        </span>
         
        <a
          href="/race"
        >
          We just launched the COVID Racial Data Tracker
        </a>
      </div>
    </div>
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="siteNavContainer"
            >
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <div
                className="tools"
              >
                <div
                  className="searchInput"
                >
                  <div
                    data-reach-combobox=""
                  >
                    <input
                      aria-autocomplete="both"
                      aria-controls="listbox--4"
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      autoComplete="off"
                      data-reach-combobox-input=""
                      id="header-search"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onSelect={[Function]}
                      placeholder="Search"
                      role="combobox"
                      value=""
                    />
                  </div>
                  <button
                    className="searchSubmit"
                    onClick={[Function]}
                    type="button"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      src="test-file-stub"
                    />
                  </button>
                </div>
                <a
                  className="getInvolved"
                  href="/help"
                >
                  Get involved
                </a>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
          <div
            className="atlanticBanner"
          >
            <span>
              From
            </span>
             
            <img
              alt="The Atlantic"
              src="test-file-stub"
            />
            <div />
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                <a
                  href="/link"
                >
                  Sample title
                </a>
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;
